# projects

c projects/ex0/: CMakeLists.txt  README.md  hello_world.c
c projects/ex1/: CMakeLists.txt  README.md  cipher  cipher.c  main.c  test  test.s  tests.c
c projects/ex3a/: CMakeLists.txt  README.md  linked_list.h  makefile  markov_chain.c  markov_chain.h  test  tweets_generator  tweets_generator.c
c projects/ex3b/: README.md  makefile  markov_chain.c  markov_chain.h  old_markov_chain.c  snakes_and_ladders  snakes_and_ladders.c  tweets_generator  tweets_generator.c
cpp projects/ex4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  plot_img.py  prusbmit.cpp
cpp projects/ex5/: CMakeLists.txt  Movie.cpp  RSUser.h  RSUsersLoader.cpp  RecommenderSystem.cpp  RecommenderSystem.h  RecommenderSystemLoader.cpp  print_main.cpp  sys
cpp projects/ex5/test.dSYM/Contents/Resources/DWARF/: test
cpp projects/ex6/: Dictionary.hpp  HashMap.hpp  README.md
python projects/ex1.py/: additional_file.py  hello_turtle.py  math_print.py
python projects/ex10/: AUTHORS  AUTHORS (2)  apple.py  bomb.py  frame_difference.py  game.py  snake.py  snake_main.py  vidg (1).py
python projects/ex11/: ex11.py
python projects/ex3/: ex3.py  main.py
python projects/ex4/: hangman.py  lab4.py
python projects/ex6/: cartoonify.py  ex6_helper.py  test_cartoonify.py
python projects/ex7/: ex7.py
python projects/ex8/: puzzle_solver.py  test_ex8.py
python projects/ex9/: __game.py  _game.py  board.py  (+5 more)
(+16 files in other folders)
